@@ -4,27 +4,28 @@ import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
+import okhttp3.OkHttpClient;
+import okhttp3.Request;
+import okhttp3.Response;
 import org.developerkubilay.safra.p2p.P2pConstants;
 import org.developerkubilay.safra.p2p.SafraBuildInfo;
 
 import java.io.IOException;
 import java.net.URI;
 import java.net.URLEncoder;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
-import java.time.Duration;
 import java.util.ArrayList;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Set;
 import java.util.UUID;
+import java.util.concurrent.TimeUnit;
 
 public final class P2pTurnCredentialClient {
-    private static final HttpClient HTTP_CLIENT = HttpClient.newBuilder()
-        .connectTimeout(Duration.ofMillis(P2pConstants.RENDEZVOUS_TIMEOUT_MS))
+    private static final OkHttpClient HTTP_CLIENT = new OkHttpClient.Builder()
+        .connectTimeout(P2pConstants.RENDEZVOUS_TIMEOUT_MS, TimeUnit.MILLISECONDS)
+        .readTimeout(P2pConstants.RENDEZVOUS_TIMEOUT_MS, TimeUnit.MILLISECONDS)
         .build();
 
     private P2pTurnCredentialClient() {
@@ -36,95 +37,104 @@ public final class P2pTurnCredentialClient {
         }
 
         URI uri = turnCredentialsUri(role, turnOnly);
-        HttpRequest.Builder builder = HttpRequest.newBuilder(uri)
-            .timeout(Duration.ofMillis(P2pConstants.RENDEZVOUS_TIMEOUT_MS))
-            .GET();
+        Request.Builder builder = new Request.Builder()
+            .url(uri.toString())
+            .get();
         String token = P2pConstants.rendezvousToken();
-        if (!token.isBlank()) {
+        if (token != null && !token.trim().isEmpty()) {
             builder.header("Authorization", "Bearer " + token);
         }
 
-        HttpResponse<String> response;
+        Response response = HTTP_CLIENT.newCall(builder.build()).execute();
         try {
-            response = HTTP_CLIENT.send(builder.build(), HttpResponse.BodyHandlers.ofString());
-        } catch (InterruptedException exception) {
-            Thread.currentThread().interrupt();
-            throw new IOException("TURN credential istegi yarida kesildi", exception);
-        }
-
-        if (response.statusCode() < 200 || response.statusCode() >= 300) {
-            throw new IOException("TURN credential istegi HTTP " + response.statusCode() + " dondu");
-        }
-
-        JsonObject json;
-        try {
-            json = new JsonParser().parse(response.body()).getAsJsonObject();
-        } catch (RuntimeException exception) {
-            throw new IOException("TURN credential cevabi gecersiz JSON", exception);
-        }
-
-        JsonArray iceServers = json.getAsJsonArray("iceServers");
-        if (iceServers == null || iceServers.size() == 0) {
-            throw new IOException("TURN credential cevabinda iceServers yok");
-        }
-
-        Set<P2pTurnCredentials.TurnServer> udpServers = new LinkedHashSet<>();
-        String username = "";
-        String credential = "";
-        for (JsonElement serverElement : iceServers) {
-            if (!serverElement.isJsonObject()) {
-                continue;
+            if (response.code() < 200 || response.code() >= 300) {
+                throw new IOException("TURN credential istegi HTTP " + response.code() + " dondu");
             }
 
-            JsonObject server = serverElement.getAsJsonObject();
-            String candidateUsername = string(server, "username");
-            String candidateCredential = string(server, "credential");
-            if (!candidateUsername.isBlank() && !candidateCredential.isBlank()) {
-                username = candidateUsername;
-                credential = candidateCredential;
+            String body = response.body() != null ? response.body().string() : "";
+            JsonObject json;
+            try {
+                json = new JsonParser().parse(body).getAsJsonObject();
+            } catch (RuntimeException exception) {
+                throw new IOException("TURN credential cevabi gecersiz JSON", exception);
             }
 
-            JsonElement urlsElement = server.get("urls");
-            if (urlsElement == null || urlsElement.isJsonNull()) {
-                continue;
+            JsonArray iceServers = json.getAsJsonArray("iceServers");
+            if (iceServers == null || iceServers.size() == 0) {
+                throw new IOException("TURN credential cevabinda iceServers yok");
             }
-            if (urlsElement.isJsonPrimitive()) {
-                addUdpServer(urlsElement.getAsString(), udpServers);
-                continue;
-            }
-            if (urlsElement.isJsonArray()) {
-                for (JsonElement urlElement : urlsElement.getAsJsonArray()) {
-                    if (urlElement != null && urlElement.isJsonPrimitive()) {
-                        addUdpServer(urlElement.getAsString(), udpServers);
+
+            Set<P2pTurnCredentials.TurnServer> udpServers = new LinkedHashSet<>();
+            String username = "";
+            String credential = "";
+            for (JsonElement serverElement : iceServers) {
+                if (!serverElement.isJsonObject()) {
+                    continue;
+                }
+
+                JsonObject server = serverElement.getAsJsonObject();
+                String candidateUsername = string(server, "username");
+                String candidateCredential = string(server, "credential");
+                if (candidateUsername != null && !candidateUsername.trim().isEmpty()
+                    && candidateCredential != null && !candidateCredential.trim().isEmpty()) {
+                    username = candidateUsername;
+                    credential = candidateCredential;
+                }
+
+                JsonElement urlsElement = server.get("urls");
+                if (urlsElement == null || urlsElement.isJsonNull()) {
+                    continue;
+                }
+                if (urlsElement.isJsonPrimitive()) {
+                    addUdpServer(urlsElement.getAsString(), udpServers);
+                    continue;
+                }
+                if (urlsElement.isJsonArray()) {
+                    for (JsonElement urlElement : urlsElement.getAsJsonArray()) {
+                        if (urlElement != null && urlElement.isJsonPrimitive()) {
+                            addUdpServer(urlElement.getAsString(), udpServers);
+                        }
                     }
                 }
             }
-        }
 
-        if (username.isBlank() || credential.isBlank()) {
-            throw new IOException("TURN credential cevabinda username/credential eksik");
-        }
-        if (udpServers.isEmpty()) {
-            throw new IOException("TURN credential cevabinda UDP TURN sunucusu yok");
-        }
+            if (username.trim().isEmpty() || credential.trim().isEmpty()) {
+                throw new IOException("TURN credential cevabinda username/credential eksik");
+            }
+            if (udpServers.isEmpty()) {
+                throw new IOException("TURN credential cevabinda UDP TURN sunucusu yok");
+            }
 
-        return new P2pTurnCredentials(
-            List.copyOf(udpServers),
-            username,
-            credential,
-            integer(json.get("ttl"), P2pConstants.TURN_DEFAULT_CREDENTIAL_TTL_SECONDS)
-        );
+            return new P2pTurnCredentials(
+                new ArrayList<>(udpServers),
+                username,
+                credential,
+                integer(json.get("ttl"), P2pConstants.TURN_DEFAULT_CREDENTIAL_TTL_SECONDS)
+            );
+        } finally {
+            response.close();
+        }
     }
 
     private static URI turnCredentialsUri(String role, boolean turnOnly) {
         String base = P2pConstants.rendezvousUrl().replaceAll("/+$", "");
         URI baseUri = URI.create(base);
-        String scheme = switch (baseUri.getScheme().toLowerCase(Locale.ROOT)) {
-            case "http", "https" -> baseUri.getScheme().toLowerCase(Locale.ROOT);
-            case "ws" -> "http";
-            case "wss" -> "https";
-            default -> throw new IllegalArgumentException("unsupported rendezvous URL scheme: " + baseUri.getScheme());
-        };
+        String scheme;
+        String lowerScheme = baseUri.getScheme().toLowerCase(Locale.ROOT);
+        switch (lowerScheme) {
+            case "http":
+            case "https":
+                scheme = lowerScheme;
+                break;
+            case "ws":
+                scheme = "http";
+                break;
+            case "wss":
+                scheme = "https";
+                break;
+            default:
+                throw new IllegalArgumentException("unsupported rendezvous URL scheme: " + baseUri.getScheme());
+        }
         String identifier = "safra-" + role + "-" + SafraBuildInfo.minecraftVersion() + "-"
             + UUID.randomUUID().toString().replace("-", "").substring(0, 8);
         String query = "mode=" + encode(turnOnly ? "turn-only" : "auto")
@@ -134,7 +144,7 @@ public final class P2pTurnCredentialClient {
     }
 
     private static void addUdpServer(String rawUrl, Set<P2pTurnCredentials.TurnServer> udpServers) {
-        if (rawUrl == null || rawUrl.isBlank()) {
+        if (rawUrl == null || rawUrl.trim().isEmpty()) {
             return;
         }
 
@@ -151,7 +161,7 @@ public final class P2pTurnCredentialClient {
         }
 
         String query = uri.getQuery();
-        if (query != null && !query.isBlank()) {
+        if (query != null && !query.trim().isEmpty()) {
             String transport = queryParameter(query, "transport");
             if (transport != null && !"udp".equalsIgnoreCase(transport)) {
                 return;
@@ -160,7 +170,7 @@ public final class P2pTurnCredentialClient {
 
         String host = uri.getHost();
         int port = uri.getPort();
-        if (host == null || host.isBlank() || port < 1 || port > 65535) {
+        if (host == null || host.trim().isEmpty() || port < 1 || port > 65535) {
             return;
         }
 
@@ -178,7 +188,11 @@ public final class P2pTurnCredentialClient {
     }
 
     private static String encode(String value) {
-        return URLEncoder.encode(value, StandardCharsets.UTF_8);
+        try {
+            return URLEncoder.encode(value, "UTF-8");
+        } catch (java.io.UnsupportedEncodingException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     private static String string(JsonObject object, String key) {
